# graphsql

./: .behaverc  .dockerignore  .env.example  .env.mcp.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  K8S_HELM.md  LICENSE  Makefile  README.md  TESTING.md  TEST_QUICK_REFERENCE.md  Taskfile.yaml  docker-compose.prod.yml  docker-compose.yml  progress.output  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
admin/: .dockerignore  .env.example  Dockerfile  README.md  deno.json  fresh.gen.ts  main.ts  tailwind.config.ts
admin/components/: Layout.tsx  Navbar.tsx  Sidebar.tsx  StatsCard.tsx  TableView.tsx
admin/islands/: DataGrid.tsx  GraphQLPlayground.tsx  LiveFeed.tsx  QueryBuilder.tsx  TableBrowser.tsx
admin/lib/: api.ts  auth.ts  types.ts  websocket.ts
admin/routes/: index.tsx  login.tsx  logout.ts
admin/routes/api/: auth.ts  graphql.ts
admin/routes/monitoring/: index.tsx  websocket.tsx
admin/routes/settings/: index.tsx
admin/routes/tables/: [table].tsx  index.tsx
admin/static/: styles.css
docs/: api.rst  conf.py  index.rst  overview.rst
features/: __init__.py  configuration.feature  environment.py  graphql.feature  health_check.feature  rest_api.feature
features/steps/: __init__.py  common_steps.py  configuration_steps.py  graphql_steps.py  health_check_steps.py  rest_api_steps.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/graphsql/: __init__.py  auth.py  auth_routes.py  cache.py  cli.py  config.py  database.py  events.py  graphql_schema.py  main.py  rate_limit.py  rest_routes.py  utils.py  websocket_routes.py
src/graphsql/mcp_server/: __init__.py  config.py  db.py  engine.py  main.py  security.py  tools.py
src/graphsql/mcp_server/auth/: __init__.py  cli.py  logging_config.py  proxy.py  session_manager.py  sso.py  user_config.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_routes.py  test_cache.py  test_config.py  test_graphql_events.py  test_pagination.py  test_rate_limit.py  test_rest_routes.py  test_utils.py  test_websocket.py
tests/test_mcp_server/: test_auth_cli.py  test_auth_proxy.py  test_auth_session_manager.py  test_auth_sso.py  test_auth_user_config.py  test_config.py  test_db.py  test_engine.py  test_main.py  test_security.py  test_tools.py
