[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-api"
version = "0.1.0"
description = "Automatic REST and GraphQL API for arbitrary databases"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Anton Feldmann", email = "anton.feldmann@gmail.com" }
]
keywords = ["fastapi", "graphql", "sqlalchemy", "rest", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "strawberry-graphql[fastapi]>=0.219.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",  # PostgreSQL
    "pymysql>=1.1.0",  # MySQL
    "cryptography>=42.0.0",  # for MySQL
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "sphinx>=7.4.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/afeldman/graphsql"
Documentation = "https://github.com/afeldman/graphsql#readme"
Repository = "https://github.com/afeldman/graphsql"

[project.scripts]
auto-api = "graphsql.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/graphsql"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
