[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphsql"
version = "0.1.0"
description = "Automatic REST and GraphQL API for arbitrary databases"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Anton Feldmann", email = "anton.feldmann@gmail.com" }
]
keywords = ["fastapi", "graphql", "sqlalchemy", "rest", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=1.4.0",
    "strawberry-graphql[fastapi]>=0.200.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.0.0",  # MySQL
    "cryptography>=38.0.0",  # for MySQL
    "pydantic>=1.10.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.0.250",
    "mypy>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-autodoc-typehints>=1.20.0",
    "behave>=1.2.6",
]
cloud = [
    "sqlalchemy-hana>=0.13.0",
    "hdbcli>=2.21.0",
    "sqlalchemy-redshift>=0.8.14",
    "snowflake-sqlalchemy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/afeldman/graphsql"
Documentation = "https://github.com/afeldman/graphsql#readme"
Repository = "https://github.com/afeldman/graphsql"

[project.scripts]
graphsql = "graphsql.main:run"
graphsql-start = "graphsql.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/graphsql"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
